# microsimulation

./: .Rbuildignore  .gitignore  DESCRIPTION  DESCRIPTION~  NAMESPACE  NAMESPACE~  NEWS  README.org  acinclude.m4  clean.sh  configure  configure.ac  microsimulation.Rproj  readme.md
R/: .Rhistory  SummaryReport.R  calibSim.R  callPersonSimulation.R  callPersonSimulation.R~  cervical.R  plugin.R  pqueue.R  rcpp_hello_world.R  rcpp_hello_world.R~  simulate.R  zzz.R
R/archive/: cervical.R
analysis/: MPI_openMP.sh  Rprofiling.R  RunSim_simple.R  buildFlags.sh  callgrind.out.7858  compileTimingCsv.awk  computeSpeedup.R  flagsProfiling.csv  implementationProfiling.csv  multinode.csv  openMPprofiling.csv  openMPprofiling.sh  plotProfiling.R  runValgrind.sh
data/: fhcrcData.rda
doc/: OutputPlots.R  Rprofiling.R  RunSim.R  TODO.html  TODO.org  openMPprofiling.sh  openMPprofiling_simple.sh
doc/report/: README.md  appendix.tex  flags-measurements.tex  future.tex  introduction.tex  measurements.tex  multi-node.tex  parallel-measurements.tex  performance-definitions.tex  recapitulation.tex  references.bib  report.tex
inst/: develop_to_master.sh
inst/doc/: examples.html  examples.org  index.html  index.org
inst/doc/html/: RngStream_8cpp.html  RngStream_8h.html  (+833 more)
inst/include/: RngStream.cpp  RngStream.h  c_optim.h  gsm.h  microsimulation.cc.bak  microsimulation.h  pqueue.h  rcpp_table.h  splines.h  ssim.cc  tprocessconf.h  tprocessconf.h.in
man/: BaseDiscreteEventSimulation.Rd  Classes.Rd  Data.Rd  EventQueue.Rd  Examples.Rd  Internal.Rd  MVK.Rd  RNGStream.Rd  RNGstate.Rd  SummaryReport.Rd  Utilities.Rd  callPersonSimulation.Rd  callPersonSimulation.Rd~  discountedInterval.Rd  enum<-.Rd  microsimulation-package.Rd  microsimulation-package.Rd~  simulate.Rd
shinyApp/: server.R  ui.R
src/: .Rhistory  Makevars  Makevars.win  Makevars.win~  Makevars~  R-replacements.h  README.txt  RngStream.c  RngStream.cpp  RngStream.h  RngStream.hpp  Rng_wrapper.cpp  Rng_wrapper.cpp~  Rng_wrapper.h  Rng_wrapper.h~  calibperson-r.cc  cervical.cpp  config.h~  event-r.cc  event-r.cc~  event-r.h  event-r.h~  fhcrc-example.cpp  fhcrc-reimplementation.cpp  fhcrc-test.cpp  gsm.cpp  heap.h  illness-death.cpp  init.c  microsimulation-static.h  microsimulation.cc  microsimulation.h  microsimulation.hpp  microsimulation.h~  person-1.cc~  person-r.cc  person-r.cc~  pqueue.cpp  rcpp_hello_world.h  rcpp_table.h  (+24 more)
src/archive/: cervical.cpp  person-r-20121231.cc
src/doc/: Doxyfile  maindoc.h
src/siena/: ssim.h  tprocess.h
src/unuran-patched/: config.h  unuran.h.in
src/unuran-patched/methods/: Makefile  Makefile.am  Makefile.in  arou.lo  ars.lo  auto.lo  cext.lo  cstd.lo  dari.lo  dau.lo  dext.lo  dgt.lo  dsrou.lo  dss.lo  dstd.lo  empk.lo  empl.lo  gibbs.lo  hinv.c  hinv.lo  hist.lo  hitro.lo  hrb.lo  hrd.lo  hri.lo  itdr.lo  libmethods.la  mcorr.lo  mixt.lo  mvstd.lo  mvtdr.lo  ninv.lo  norta.lo  nrou.lo  pinv.lo  srou.lo  ssr.lo  tabl.lo  tdr.lo  unif.lo  (+4 more)
src/unuran-patched/methods/.deps/: arou.Plo  ars.Plo  auto.Plo  cext.Plo  cstd.Plo  dari.Plo  dau.Plo  dext.Plo  dgt.Plo  dsrou.Plo  dss.Plo  dstd.Plo  empk.Plo  empl.Plo  gibbs.Plo  hinv.Plo  hist.Plo  hitro.Plo  hrb.Plo  hrd.Plo  hri.Plo  itdr.Plo  mcorr.Plo  mixt.Plo  mvstd.Plo  mvtdr.Plo  ninv.Plo  norta.Plo  nrou.Plo  pinv.Plo  srou.Plo  ssr.Plo  tabl.Plo  tdr.Plo  unif.Plo  utdr.Plo  vempk.Plo  vnrou.Plo  x_gen.Plo
src/unuran-patched/methods/.libs/: libmethods.la
src/unuran-patched/rngstreams-1.0.1/: AUTHORS  INSTALL  Makefile  Makefile.am  Makefile.in  NEWS  README  aclocal.m4  autogen.sh  config.h  config.h.in  config.status  configure  configure.ac  libtool
src/unuran-patched/rngstreams-1.0.1/doc/: Makefile  Makefile.am  Makefile.in  rngstreams.info  rngstreams.texi  rngstreams.txt  stamp-vti
src/unuran-patched/rngstreams-1.0.1/doc/rngstreams.html/: Example.html  Install.html  Interface.html  index.html
src/unuran-patched/rngstreams-1.0.1/examples/: Makefile  Makefile.am  Makefile.in  example1  example1.c
src/unuran-patched/rngstreams-1.0.1/examples/.deps/: example1.Po
src/unuran-patched/rngstreams-1.0.1/src/: Makefile  Makefile.am  Makefile.in  RngStream.lo  librngstreams.la
src/unuran-patched/rngstreams-1.0.1/src/.deps/: RngStream.Plo
src/unuran-patched/rngstreams-1.0.1/src/.libs/: librngstreams.la  librngstreams.lai
test/: Rcpp-tests.R  RngStream-revised.cpp  RngStream-revised.cpp~  RngStream-revised.h  TODO.org  cluster.sh  cluster_mic.R  rescreen.R  rngstream-c++-example.cpp  rngstream-c++11.hpp  submit_cluster.sh  test_microsimulation.R
tests/: testthat.R
tests/testthat/: test-callFhcrc.R  test-callIllnessDeath.R  test-callPersonSimulation2.R
(+425 files in other folders)
